Fixing issue when collapsing/showing sidebar on form screen.

--- a/front-end/src/app/dashboard/dashboard.component.scss
+++ b/front-end/src/app/dashboard/dashboard.component.scss
@@ -39,7 +39,7 @@
           margin: 0 auto;
         }
       }
-      .forms-table {
+      /* .forms-table {
         width: 100%;
         tbody {
           tr {
@@ -56,7 +56,7 @@
             }
           }
         }
-      }
+      } */ // .forms-table
     }
   }
   footer {
